Fix key alignment

--- a/webapp/channels/src/sass/routes/_admin-console.scss
+++ b/webapp/channels/src/sass/routes/_admin-console.scss
@@ -785,6 +785,7 @@
         top: 0;
         right: 0;
         height: 100%;
+        display: flex;
 
         i {
             color: functions.alpha-color(variables.$white, 0.5);
